engine/codex-rs/cli/src/doctor/snapshots/codex__doctor__output__tests__doctor_human_report_environment_rows.snap
---
source: cli/src/doctor/output.rs
expression: "render_human_report(&report, detailed_no_color_unicode_options())"
---
Codex Doctor v0.0.0

Notes
   ↑ desktop      build 123 available (ready to install)
   ⚠ terminal     narrow terminal
   ✗ auth         token expired - Run `codex login`.
   ⚠ git          this worktree is not on a Windows Dev Drive - create a trusted Windows Dev Drive: https://learn.microsoft.com/en-us/windows/dev-drive/
   ⚠ security     Microsoft Defender can interfere with Codex. Verify Codex exclusions.
─────────────────────────────────────────────────────────────

Environment
  ✓ system       en-US
      os                       macOS 15.0
      OS language              en-US
      VISUAL                   code --wait
      EDITOR                   vim
      PAGER                    less -R
      GIT_PAGER                delta
      GH_PAGER                 less
      LESS                     -FRX
  ✓ disk         sufficient free disk space (42.0 GiB)
  ⚠ security     Microsoft Defender can interfere with Codex. Verify Codex exclusions.
      endpoint products        Microsoft Defender
      exclusion targets        verified Codex app and required helpers
    ▸ Codex exclusions         not verified (expected Codex application and helper exclusions)
    → Microsoft Defender: Add a certificate or executable-path exclusion for Codex and its helpers. If Attack Surface Reduction blocks Codex, add a rule exclusion. If Controlled Folder Access blocks Codex, allow the app.
  ✓ runtime      running local build on darwin-arm64
  ✓ install      consistent
      managed by               npm: no · bun: no · pnpm: no · Vite+: no · package root —
  ✓ search       search is OK (bundled)
  ✓ git          git version 2.54.0
      selected git             /usr/bin/git
      version                  git version 2.54.0
      repo detected            true
  ⚠ git          this worktree is not on a Windows Dev Drive — create a trusted Windows Dev Drive: https://learn.microsoft.com/en-us/windows/dev-drive/
  ⚠ terminal     narrow terminal
  ✓ title        default · project codex
      title source             default
      title items              activity, project-name
      project value            codex
  ✓ state        state paths inspectable

Configuration
  ✓ config       loaded
      feature flags            0 enabled · 0 overridden
      configured TUI mode      fullscreen
  ✗ auth         token expired — Run `codex login`.
      OPENAI_API_KEY           present

Desktop App
  ✓ desktop      the desktop application is installed
      version                  1.2.3
      running                  true
      log directory            $HOME/Library/Logs/com.openai.codex
  ✓ desktop      the desktop app-server initialized successfully

Updates
  ✓ updates      update configuration is locally consistent
      desktop update status    ready to install
      desktop latest build     123

Connectivity
  ✓ network      network environment readable
  ✓ websocket    Responses WebSocket handshake succeeded
  ✓ reachability active provider endpoints are reachable over HTTP

Background Server
  ✓ app-server   background server is not running

─────────────────────────────────────────────────────────────
16 ok · 5 notes · 3 warn · 1 fail failed

--summary compact output           --all expand truncated lists
--json redacted report
